rust/oxide_generator_rs/tests/ui/fail_state_sliced_enum.rs
use oxide_generator_rs::state;

#[state(sliced = true)]
pub enum MyState {
    A,
}

fn main() {}

